2003-03-26  David Ayers  <d.ayers@inode.at>

	* Source/NSKeyValueCoding.m: Added documentation. 
	* Source/NSKeyValueCoding.m ([NSObject -takeValue:forKey:]),
	([NSObject -valueForKey:]): Corrected search order of instance
	variables.

2003-03-25  Stephane Corthesy <stephane@sente.ch>

	* macosx: New directory holding MacOSX project for building 
	Additions framework.

2003-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: When loading a resource and attempting to notify
	a client, check that the client responds to the selectors before
	sending messages to it.
	Make ([-loadResourceDataNotifyingClient:usingCache:]) work in
	background (non-blocking).
	
2003-03-25  David Ayers  <d.ayers@inode.at>

	* Headers/gnustep/base/GSObjCRuntime.h
	* Source/Additions/GSObjCRuntime.m (GSObjCGetMethod),
	(GSObjCReplaceMethod): Added new functions. 
	* Source/Additions/GSObjCRuntime.m (search_for_method_in_class):
	Renamed static function for NeXT runtime to better reflect
	reality.
	(GSObjCAddMethods): Updated usage.
	(search_for_method_in_class): New static function for GNU runtime.
	(flush_method_cache_for_class): New static function.
	* Headers/gnustep/base/GSCategories.h: Included necessary headers.

2003-03-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Completed merge of changes from 1.6.0 branch.

2003-03-17  Adam Fedor  <fedor@gnu.org>

	* Version 1.6.0

2003-03-17  Adam Fedor  <fedor@gnu.org>

	* Testing/LoadMe.m (afterLoad): Use description, not name.
	* Testing/nsfilemanager.m: Print some output. Clean up.
	* Testing/scanner.m, nstimezone.m, release.m: Idem.

	* config/config.vsprintf, config/config.vasprintf: Rewrite to
	properly call a variable argument function.

2003-03-14  Adam Fedor  <fedor@Eldorado.local.>

	* Testing/nsarray.m (compare): Un-nest function.

	* Source/NSProcessInfo.m (-operatingSystem): Add darwin. 

2003-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: ([-isDeletableFileAtPath:]) Fix for the