@@ -23,6 +23,10 @@
 #include	<Foundation/Foundation.h>
 #include        "AGSHtml.h"
 #include "gnustep/base/GNUstep.h"
+#ifdef NeXT_Foundation_LIBRARY
+#include "gnustep/base/GSCategories.h"
+#include "gnustep/base/GSCompatibility.h"
+#endif
 
 static int      XML_ELEMENT_NODE;
 static int      XML_ENTITY_REF_NODE;
